# SatelliteServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: client.h  linkedList.h  ping.h  serverConnect.h
src/: CMakeLists.txt  client.c  lib  linkedList.c  ping.c
src/lib/: CMakeLists.txt  linkedList.c
